@@ -1,7 +1,7 @@
 
 create table honks (honkid integer primary key, userid integer, what text, honker text, xid text, rid text, dt text, url text, audience text, noise text, convoy text, whofore integer, format text, precis text, oonker text, flags integer);
 create table donks (honkid integer, fileid integer);
-create table files(fileid integer primary key, xid text, name text, description text, url text, media text, local integer, content blob);
+create table filemeta (fileid integer primary key, xid text, name text, description text, url text, media text, local integer);
 create table honkers (honkerid integer primary key, userid integer, name text, xid text, flavor text, combos text);
 create table xonkers (xonkerid integer primary key, name text, info text, flavor text);
 create table zonkers (zonkerid integer primary key, userid integer, name text, wherefore text);
@@ -17,8 +17,8 @@ create index idx_honksoonker on honks(oonker);
 create index idx_honkerxid on honkers(xid);
 create index idx_xonkername on xonkers(name);
 create index idx_zonkersname on zonkers(name);
-create index idx_filesxid on files(xid);
-create index idx_filesurl on files(url);
+create index idx_filesxid on filemeta(xid);
+create index idx_filesurl on filemeta(url);
 create index idx_ontology on onts(ontology);
 create index idx_onthonkid on onts(honkid);
 create index idx_placehonkid on places(honkid);
